syntax = "proto3";

package spine.test.core.given;

import "spine/options.proto";

option (type_url_prefix) = "type.spine.io";
option java_package = "io.spine.test.core.given";
option java_outer_classname = "EnrichmentsTestEventsProto";
option java_multiple_files = true;

message EtProjectCreated {
    string id = 1;
}

message EtProjectStarted {
    string id = 1;
}

message EtProjectInfo {
    option (enrichment_for) = "EtProjectCreated, EtProjectStarted";
    string project_name = 1 [(by) = "id", (required) = true];
}

message EtProjectDetails {
    option (enrichment_for) = "EtProjectCreated, EtProjectStarted";
    string project_description = 1 [(by) = "id"];
    string logo_url = 2 [(by) = "id"];
}
